# Onyx

./: CMakeLists.txt  analysisTest.ox  grammar.ox  notes.txt  progtest.ox  test.c  test.ox
src/: AST.cpp  AST.h  CloneAST.cpp  CodeGenerator.cpp  CodeGenerator.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Monomorphizer.cpp  Monomorphizer.h  Onyx.cpp  Onyx.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  main.cpp
src/IR/: memory.c  memory.h  pool.h
